@@ -10,6 +10,7 @@ import java.util.concurrent.atomic.AtomicLong;
 import java.util.stream.Collectors;
 import org.springframework.dao.DuplicateKeyException;
 import roomescape.domain.Reservation;
+import roomescape.domain.ReservationStatus;
 
 public class FakeReservationRepository implements ReservationRepository {
 
@@ -22,15 +23,23 @@ public class FakeReservationRepository implements ReservationRepository {
     }
 
     @Override
-    public long save(Reservation reservation) {
+    public Reservation save(Reservation reservation) {
         List<Reservation> existingReservations = findByDateTimeTheme(reservation.getDate(), reservation.getTime().getStartAt(), reservation.getTheme().getId());
         if (!existingReservations.isEmpty()) {
             throw new DuplicateKeyException("동일한 예약이 존재합니다.");
         }
         long id = reservationId.getAndIncrement();
-        Reservation newReservation = new Reservation(id, reservation.getMember(), reservation.getDate(), reservation.getTime(), reservation.getTheme());
+        Reservation newReservation = new Reservation(id, reservation.getMember(), reservation.getDate(), reservation.getTime(), reservation.getTheme(), ReservationStatus.RESERVED);
         reservations.add(newReservation);
-        return id;
+        return newReservation;
+    }
+
+    private List<Reservation> findByDateTimeTheme(LocalDate date, LocalTime startAt, Long themeId) {
+        return reservations.stream()
+                .filter(reservation -> reservation.getTheme().getId().equals(themeId))
+                .filter(reservation -> reservation.getDate().equals(date))
+                .filter(reservation -> reservation.getTime().getStartAt().equals(startAt))
+                .toList();
     }
 
     @Override
@@ -39,28 +48,22 @@ public class FakeReservationRepository implements ReservationRepository {
     }
 
     @Override
-    public Optional<Reservation> findById(Long id) {
+    public List<Reservation> findAllByMemberId(Long memberId) {
         return reservations.stream()
-                .filter(reservation -> Objects.equals(reservation.getId(), id))
-                .findFirst();
+                .filter(reservation -> reservation.getMember().getId().equals(memberId))
+                .toList();
     }
 
     @Override
-    public List<Reservation> findByDateTimeTheme(LocalDate date, LocalTime time, long themeId) {
+    public List<Reservation> findByDateAndThemeId(LocalDate date, Long themeId) {
         return reservations.stream()
-                .filter(reservation -> reservation.getDate().equals(date) && reservation.getTime().getStartAt().equals(time) && reservation.getTheme().getId().equals(themeId))
-                .collect(Collectors.toList());
+                .filter(reservation -> reservation.getDate().equals(date))
+                .filter(reservation -> reservation.getTheme().getId().equals(themeId))
+                .toList();
     }
 
     @Override
-    public List<Reservation> findByDateAndTheme(LocalDate date, long themeId) {
-        return reservations.stream()
-                .filter(reservation -> reservation.getDate().equals(date) && reservation.getTheme().getId().equals(themeId))
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<Reservation> findByThemeMemberDateRange(Long themeId, Long memberId, LocalDate from, LocalDate to) {
+    public List<Reservation> findByMemberIdAndThemeIdAndDateRange(Long memberId, Long themeId, LocalDate from, LocalDate to) {
         return reservations.stream()
                 .filter(r -> themeId == null || r.getTheme().getId().equals(themeId))
                 .filter(r -> memberId == null || r.getMember().getId().equals(memberId))
@@ -70,19 +73,36 @@ public class FakeReservationRepository implements ReservationRepository {
     }
 
     @Override
-    public int deleteById(long id) {
-        Reservation deleteReservation = reservations.stream()
+    public Optional<Reservation> findByTimeId(Long id) {
+        return reservations.stream()
+                .filter(reservation -> reservation.getTime().getId().equals(id))
+                .findFirst();
+    }
+
+    @Override
+    public Optional<Reservation> findByThemeId(Long id) {
+        return reservations.stream()
+                .filter(reservation -> reservation.getTheme().getId().equals(id))
+                .findFirst();
+    }
+
+    @Override
+    public boolean existsByDateAndTimeIdAndThemeId(LocalDate date, Long timeId, Long themeId) {
+        return reservations.stream()
+                .filter(r -> r.getTheme().getId().equals(themeId))
+                .filter(r -> r.getTime().getId().equals(timeId))
+                .anyMatch(r -> r.getDate().equals(date));
+    }
+
+    @Override
+    public void deleteById(Long id) {
+        reservations.removeIf(reservation -> reservation.getId().equals(id));
+    }
+
+    @Override
+    public Optional<Reservation> findById(Long id) {
+        return reservations.stream()
                 .filter(reservation -> Objects.equals(reservation.getId(), id))
-                .findFirst().orElse(null);
-
-        if (deleteReservation != null) {
-            int affectedRows = (int) reservations.stream()
-                    .filter(reservation -> Objects.equals(reservation.getId(), deleteReservation.getId()))
-                    .count();
-
-            reservations.remove(deleteReservation);
-            return affectedRows;
-        }
-        return 0;
+                .findFirst();
     }
 }
